@@ -282,4 +282,6 @@ EXPORTS
 
       gcry_mpi_ec_decode_point  @246
 
+      gcry_get_config           @247
+
 ;; end of file with public symbols for Windows.
